--- a/tests/js-tests/project/proj.win32/js-tests.vcxproj
+++ b/tests/js-tests/project/proj.win32/js-tests.vcxproj
@@ -107,17 +107,9 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\..\external\websockets\prebuilt\win32\*.*" "$
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PreBuildEvent>
-      <Command>if not exist "$(OutDir)" mkdir "$(OutDir)"
-if exist "$(OutDir)\js-tests-res" rd /s /q "$(OutDir)\js-tests-res"
-mkdir "$(OutDir)\js-tests-res"
-mkdir "$(OutDir)\js-tests-res\script"
-mkdir "$(OutDir)\js-tests-res\src"
-mkdir "$(OutDir)\js-tests-res\res"
-xcopy "$(ProjectDir)..\..\..\..\cocos\scripting\js-bindings\script\*" "$(OutDir)\js-tests-res\script" /e /Y
-xcopy "$(ProjectDir)..\..\src" "$(OutDir)\js-tests-res\src\" /e /Y
-xcopy "$(ProjectDir)..\..\res" "$(OutDir)\js-tests-res\res\" /e /Y
-copy "$(ProjectDir)..\..\main.js" "$(OutDir)\js-tests-res"
-copy "$(ProjectDir)..\..\project.json" "$(OutDir)\js-tests-res"</Command>
+      <Command>if not exist "$(ProjectDir)..\..\script" mkdir "$(ProjectDir)..\..\script"
+xcopy "$(ProjectDir)..\..\..\..\cocos\scripting\js-bindings\script" "$(ProjectDir)..\..\script" /e /Y
+xcopy "$(ProjectDir)..\..\..\cpp-tests\Resources" "$(ProjectDir)..\..\res" /e /Y</Command>
     </PreBuildEvent>
     <PreBuildEvent>
       <Message>Copy js and resource files.</Message>
@@ -168,17 +160,9 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\..\external\websockets\prebuilt\win32\*.*" "$
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>if not exist "$(OutDir)" mkdir "$(OutDir)"
-if exist "$(OutDir)\js-tests-res" rd /s /q "$(OutDir)\js-tests-res"
-mkdir "$(OutDir)\js-tests-res"
-mkdir "$(OutDir)\js-tests-res\script"
-mkdir "$(OutDir)\js-tests-res\src"
-mkdir "$(OutDir)\js-tests-res\res"
-xcopy "$(ProjectDir)..\..\..\..\cocos\scripting\js-bindings\script\*" "$(OutDir)\js-tests-res\script" /e /Y
-xcopy "$(ProjectDir)..\..\src" "$(OutDir)\js-tests-res\src\" /e /Y
-xcopy "$(ProjectDir)..\..\res" "$(OutDir)\js-tests-res\res\" /e /Y
-copy "$(ProjectDir)..\..\main.js" "$(OutDir)\js-tests-res"
-copy "$(ProjectDir)..\..\project.json" "$(OutDir)\js-tests-res"</Command>
+      <Command>if not exist "$(ProjectDir)..\..\script" mkdir "$(ProjectDir)..\..\script"
+xcopy "$(ProjectDir)..\..\..\..\cocos\scripting\js-bindings\script" "$(ProjectDir)..\..\script" /e /Y
+xcopy "$(ProjectDir)..\..\..\cpp-tests\Resources" "$(ProjectDir)..\..\res" /e /Y</Command>
       <Message>Copy js and resource files.</Message>
     </PreBuildEvent>
   </ItemDefinitionGroup>
