--- a/tools/tolua/cocos2dx_extension.ini
+++ b/tools/tolua/cocos2dx_extension.ini
@@ -27,7 +27,7 @@ headers = %(cocosdir)s/extensions/cocos-ext.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^Menu*$".
-classes = Control.* ControlButton.*  ScrollView$ TableView$ TableViewCell$ AssetsManager AssetsManagerEx Manifest EventAssetsManagerEx EventListenerAssetsManagerEx PUParticleSystem3D
+classes = Control.* ControlButton.*  ScrollView$ TableView$ TableViewCell$ AssetsManager AssetsManagerEx Manifest EventAssetsManagerEx EventListenerAssetsManagerEx PUParticleSystem3D ParticleSystem3D ParticlePool
 
 # what should we skip? in the format ClassName::[function function]
 # ClassName is a regular expression, but will be used like this: "^ClassName$" functions are also
@@ -47,7 +47,9 @@ skip =  .*Delegate::[*],
         TableView::[create (g|s)etDataSource$ (g|s)etDelegate],
         Manifest::[getAssets getAsset],
         EventListenerAssetsManagerEx::[create],
-        PUParticleSystem3D::[getDerivedOrientation]
+        PUParticleSystem3D::[getDerivedOrientation],
+        ParticlePool::[getActiveParticleList createParticle getNext getFirst],
+        ParticleSystem3D::[getParticlePool getAffector]
 
 
 rename_functions =
