--- a/tests/cpp-tests/proj.wp8-xaml/cpp-testsComponent/cpp-testsComponent.vcxproj
+++ b/tests/cpp-tests/proj.wp8-xaml/cpp-testsComponent/cpp-testsComponent.vcxproj
@@ -200,6 +200,7 @@
     <ClCompile Include="..\..\Classes\Camera3DTest\Camera3DTest.cpp" />
     <ClCompile Include="..\..\Classes\ChipmunkTest\ChipmunkTest.cpp" />
     <ClCompile Include="..\..\Classes\ClippingNodeTest\ClippingNodeTest.cpp" />
+    <ClCompile Include="..\..\Classes\CocosStudio3DTest\CocosStudio3DTest.cpp" />
     <ClCompile Include="..\..\Classes\ConfigurationTest\ConfigurationTest.cpp" />
     <ClCompile Include="..\..\Classes\ConsoleTest\ConsoleTest.cpp" />
     <ClCompile Include="..\..\Classes\CurlTest\CurlTest.cpp" />
@@ -400,6 +401,7 @@
     <ClInclude Include="..\..\Classes\Camera3DTest\Camera3DTest.h" />
     <ClInclude Include="..\..\Classes\ChipmunkTest\ChipmunkTest.h" />
     <ClInclude Include="..\..\Classes\ClippingNodeTest\ClippingNodeTest.h" />
+    <ClInclude Include="..\..\Classes\CocosStudio3DTest\CocosStudio3DTest.h" />
     <ClInclude Include="..\..\Classes\ConfigurationTest\ConfigurationTest.h" />
     <ClInclude Include="..\..\Classes\ConsoleTest\ConsoleTest.h" />
     <ClInclude Include="..\..\Classes\CurlTest\CurlTest.h" />
