--- a/tests/cpp-tests/proj.wp8-xaml/cpp-testsComponent/cpp-testsComponent.vcxproj.filters
+++ b/tests/cpp-tests/proj.wp8-xaml/cpp-testsComponent/cpp-testsComponent.vcxproj.filters
@@ -346,6 +346,9 @@
     <Filter Include="Classes\Particle3DTest">
       <UniqueIdentifier>{65f864c8-5b02-4c44-ab8b-a8e7289e5c7a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes\CocosStudio3DTest">
+      <UniqueIdentifier>{0066fcd2-a181-400f-a030-f5ec6230b303}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Classes\AppDelegate.cpp">
@@ -911,6 +914,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Classes\Particle3DTest\Particle3DTest.cpp">
       <Filter>Classes\Particle3DTest</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Classes\CocosStudio3DTest\CocosStudio3DTest.cpp">
+      <Filter>Classes\CocosStudio3DTest</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1676,6 +1682,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Classes\Particle3DTest\Particle3DTest.h">
       <Filter>Classes\Particle3DTest</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Classes\CocosStudio3DTest\CocosStudio3DTest.h">
+      <Filter>Classes\CocosStudio3DTest</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
