--- a/templates/js-template-default/cocos-project-template.json
+++ b/templates/js-template-default/cocos-project-template.json
@@ -79,7 +79,8 @@
             "src_package_name":"org.cocos2dx.hellojavascript",
             "files":[
                "frameworks/runtime-src/proj.android/AndroidManifest.xml",
-               "frameworks/runtime-src/proj.android-studio/app/build.gradle"
+               "frameworks/runtime-src/proj.android-studio/app/build.gradle",
+               "frameworks/runtime-src/proj.android-studio/app/AndroidManifest.xml"
             ]
          },
          "project_replace_mac_bundleid":{
