--- a/tools/tojs/cocos2dx.ini
+++ b/tools/tojs/cocos2dx.ini
@@ -50,6 +50,7 @@ skip = Node::[^setPosition$ setGLServerState description getUserObject .*UserDat
         Director::[getAccelerometer getProjection getFrustum getRenderer getConsole getCocos2dThreadId],
         Layer.*::[didAccelerate keyPressed keyReleased],
         Menu.*::[.*Target getSubItems create initWithItems alignItemsInRows alignItemsInColumns],
+        MenuItemToggle::[initWithCallback],
         Copying::[*],
         LabelProtocol::[*],
         LabelTextFormatProtocol::[*],
