--- a/tools/tojs/cocos2dx_3d.ini
+++ b/tools/tojs/cocos2dx_3d.ini
@@ -41,7 +41,7 @@ classes_need_extend = Sprite3D
 
 skip = Skeleton3D::[create],
         Sprite3D::[getAABB getMeshArrayByName createAsync],
-        Mesh::[create getMeshCommand getAABB getDefaultGLProgram getMeshVertexAttribute draw setTexture],
+        Mesh::[create getMeshCommand getAABB getDefaultGLProgram getMeshVertexAttribute draw setTexture getTexture],
         Sprite3DCache::[addSprite3DData getSpriteData],
         Animation3D::[getBoneCurves],
         Animate3D::[getKeyFrameUserInfo],
