--- a/tools/tojs/cocos2dx.ini
+++ b/tools/tojs/cocos2dx.ini
@@ -133,6 +133,7 @@ skip = Node::[^setPosition$ setGLServerState description getUserObject .*UserDat
         Mesh::[*],
         Animation3DCache::[*],
         Sprite3DMaterialCache::[*],
+        Sprite3DMaterial::[*],
         Sprite3DCache::[*],
         Bone3D::[*],
         Device::[getTextureDataForText],
