--- a/tests/js-tests/project/proj.ios/Info.plist
+++ b/tests/js-tests/project/proj.ios/Info.plist
@@ -8,7 +8,7 @@
 		<false/>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>cocos2d-x.org/assets/cpp-tests-resources</key>
+			<key>cocos2d-x.org</key>
 			<dict>
 				<key>NSIncludesSubdomains</key>
 				<true/>
